# dl-cnn-vit

./: .gitignore  README.md  colab_training_dl.ipynb  kaggle-training-dl.ipynb  kaggle-training.ipynb  pyproject.toml
configs/: params.md
configs/analysis/: embeddings_deit_tiny.yaml  embeddings_deit_tiny_supervised.yaml  embeddings_efficientnet_b3.yaml  embeddings_efficientnet_b3_supervised.yaml
configs/ensembles/: protonet_deit_tiny_logreg.yaml  protonet_efficientnet_b3_logreg.yaml  supervised_best_models.yaml
configs/phase1/: custom_cnn_baseline.yaml  deit_tiny_baseline.yaml  efficientnet_b3_baseline.yaml
configs/phase2/: deit_tiny_search.yaml  efficientnet_b3_search.yaml
configs/phase3/: deit_tiny_advanced.yaml  deit_tiny_baseline.yaml  deit_tiny_combined.yaml  deit_tiny_standard.yaml  efficientnet_b3_advanced.yaml  efficientnet_b3_baseline.yaml  efficientnet_b3_combined.yaml  efficientnet_b3_standard.yaml
configs/phase4/: not_reduced_supervised_deit_tiny.yaml  not_reduced_supervised_efficientnet_b3.yaml  protonet_deit_tiny_advanced.yaml  protonet_deit_tiny_baseline.yaml  protonet_deit_tiny_combined.yaml  protonet_deit_tiny_standard.yaml  protonet_efficientnet_b3_advanced.yaml  protonet_efficientnet_b3_baseline.yaml  protonet_efficientnet_b3_combined.yaml  protonet_efficientnet_b3_standard.yaml  (+2 more)
docs/: implementation-plan.md
tests/: conftest.py  test_aggregate_cli.py  test_config_loading.py  test_episode_sampler.py  test_experiment_workflows.py  test_metrics.py  test_pretrained_models.py  test_subset_manifests.py  test_training_optimizations.py
(+1312 files in other folders)
